update adaptive web design

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
           <img class="profile__image" src="./images/Avatar.jpg" alt="Avatar" />
           <div class="profile__info">
             <h1 class="profile__title">Jaques Cousteau</h1>
-            <button class="profile__edit-button"></button>
+            <button class="profile__edit-button" type="button"></button>
             <p class="profile__description">Explorer</p>
           </div>
-          <button class="profile__add-button"></button>
+          <button class="profile__add-button" type="button"></button>
         </section>
         <section class="cards page__section">
           <ul class="card__list">
@@ -38,8 +38,8 @@
                 alt="Yosemite Valley"
               />
               <div class="card__description">
-                <h2>Yosemite Valley</h2>
-                <button class="card__like-button"></button>
+                <h2 class="card__title">Yosemite Valley</h2>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
@@ -49,8 +49,8 @@
                 alt="Lake Louise"
               />
               <div class="card__description">
-                <h2>Lake Louise</h2>
-                <button class="card__like-button"></button>
+                <h2 class="card__title">Lake Louise</h2>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
@@ -60,8 +60,8 @@
                 alt="Bald Mountains"
               />
               <div class="card__description">
-                <h2>Bald Mountains</h2>
-                <button class="card__like-button"></button>
+                <h2 class="card__title">Bald Mountains</h2>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
@@ -71,8 +71,8 @@
                 alt="Latemar"
               />
               <div class="card__description">
-                <h2>Latemar</h2>
-                <button class="card__like-button"></button>
+                <h2 class="card__title">Latemar</h2>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
@@ -82,8 +82,8 @@
                 alt="Vanoise"
               />
               <div class="card__description">
-                <h2>Vanoise National Park</h2>
-                <button class="card__like-button"></button>
+                <h2 class="card__title">Vanoise National Park</h2>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
@@ -93,12 +93,15 @@
                 alt="Lago di Braies"
               />
               <div class="card__description">
-                <h2>Lago di Braies</h2>
-                <button class="card__like-button"></button>
+                <h2 class="card__title">Lago di Braies</h2>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
           </ul>
         </section>
+        <div class="copyright page__section">
+          <p class="copyright__description">© 2024 Around the U.S.</p>
+        </div>
       </main>
     </div>
   </body>
