--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <button class="profile__add-button" type="button"></button>
         </section>
         <section class="cards page__section">
-          <ul class="card__list">
+          <ul class="cards__list">
             <li class="card">
               <img
                 class="card__image"
@@ -99,9 +99,9 @@
             </li>
           </ul>
         </section>
-        <div class="copyright page__section">
+        <footer class="copyright page__section">
           <p class="copyright__description">© 2024 Around the U.S.</p>
-        </div>
+        </footer>
       </main>
     </div>
   </body>
