--- a/index.html
+++ b/index.html
@@ -104,6 +104,27 @@
         </footer>
       </main>
     </div>
+    <div class="modal modal__opened">
+      <div class="modal__container">
+        <button class="modal__close"></button>
+        <p class="modal__heading">Edit Profile</p>
+        <form class="modal__form">
+          <input
+            class="form__input"
+            type="text"
+            name="title"
+            placeholder="Jaques Cousteau"
+          />
+          <input
+            class="form__input"
+            type="text"
+            name="description"
+            placeholder="Explorer"
+          />
+          <button class="modal__button">Save</button>
+        </form>
+      </div>
+    </div>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
