--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
         <p class="modal__heading">Edit Profile</p>
         <form class="modal__form">
           <input
-            class="form__input"
+            class="modal__input"
             type="text"
             name="title"
             placeholder="Jaques Cousteau"
           />
           <input
-            class="form__input"
+            class="modal__input"
             type="text"
             name="description"
             placeholder="Explorer"
