--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </footer>
       </main>
     </div>
-    <div class="modal modal__container_opened">
+    <div class="modal modal_opened">
       <div class="modal__container">
         <button class="modal__close"></button>
         <p class="modal__heading">Edit Profile</p>
