--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
           <img class="profile__image" src="./images/Avatar.jpg" alt="Avatar" />
           <div class="profile__info">
             <h1 class="profile__title">Jaques Cousteau</h1>
-            <button class="profile__edit-button" type="button"></button>
+            <button
+              class="profile__edit-button"
+              id="profile-edit-button"
+              type="button"
+            ></button>
             <p class="profile__description">Explorer</p>
           </div>
           <button class="profile__add-button" type="button"></button>
@@ -104,9 +108,13 @@
         </footer>
       </main>
     </div>
-    <div class="modal modal_opened">
+    <div class="modal" id="profile-edit-modal">
       <div class="modal__container">
-        <button class="modal__close"></button>
+        <button
+          class="modal__close"
+          id="modal-close-button"
+          type="button"
+        ></button>
         <p class="modal__heading">Edit Profile</p>
         <form class="modal__form">
           <input
@@ -121,7 +129,7 @@
             name="description"
             placeholder="Explorer"
           />
-          <button class="modal__button">Save</button>
+          <button class="modal__button" type="button">Save</button>
         </form>
       </div>
     </div>
