--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         </footer>
       </main>
     </div>
+    <!--Edit modal-->
     <div class="modal" id="profile-edit-modal">
       <div class="modal__container">
         <button
@@ -68,6 +69,33 @@
         </form>
       </div>
     </div>
+    <!--Add card modal-->
+    <div class="modal" id="add-card-modal">
+      <div class="modal__container">
+        <button
+          class="modal__close"
+          id="modal-close-button"
+          type="button"
+        ></button>
+        <p class="modal__heading">New Place</p>
+        <form class="modal__form" id="add-card-form">
+          <input
+            class="modal__input modal__input_type_title"
+            id="title-input"
+            type="text"
+            name="title"
+            placeholder="Title"
+          />
+          <input
+            class="modal__input modal__input_type_url"
+            id="description-input"
+            type="text"
+            name="url"
+            placeholder="Image URL"
+          />
+          <button class="button modal__button" type="submit">Save</button>
+        </form>
+      </div>
     <template id="card-template">
       <li class="card">
         <img class="card__image" src="" alt="" />
