--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
     <template id="card-template">
       <li class="card">
         <img class="card__image" src="" alt="" />
+        <img class="card__delete" src="" alt=""/>
         <div class="card__description">
           <h2 class="card__title"></h2>
           <button class="card__like-button" type="button"></button>
