--- a/index.html
+++ b/index.html
@@ -96,6 +96,19 @@
           <button class="button modal__button" type="submit">Save</button>
         </form>
       </div>
+    <!--Preview Image-->
+    <div class="modal" id="preview-image-modal">
+      <div class="modal__container modal__container-image">
+        <button
+          class="modal__close"
+          id="modal-close-button"
+          type="button"
+        ></button>
+        <img class="modal__preview-image" src="" alt="" />
+        <p class="modal__image-caption"></p>
+      </div>
+    </div>
+    
     <template id="card-template">
       <li class="card">
         <img class="card__image" src="" alt="" />
