--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
           <button class="button modal__button" type="submit">Save</button>
         </form>
       </div>
+    </div>
     <!--Preview Image-->
     <div class="modal" id="preview-image-modal">
       <div class="modal__container modal__container-image">
@@ -108,11 +109,11 @@
         <p class="modal__image-caption"></p>
       </div>
     </div>
-    
+
     <template id="card-template">
       <li class="card">
         <img class="card__image" src="" alt="" />
-        <img class="card__delete" src="" alt=""/>
+        <img class="card__delete" src="" alt="" />
         <div class="card__description">
           <h2 class="card__title"></h2>
           <button class="card__like-button" type="button"></button>
