--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </div>
     <!--Preview Image-->
     <div class="modal" id="preview-image-modal">
-      <div class="modal__container modal__container-image">
+      <div class="modal__preview-container">
         <button
           class="modal__close"
           id="modal-close-button"
