--- a/index.html
+++ b/index.html
@@ -44,11 +44,7 @@
     <!--Edit modal-->
     <div class="modal" id="profile-edit-modal">
       <div class="modal__container">
-        <button
-          class="modal__close"
-          id="modal-close-button"
-          type="button"
-        ></button>
+        <button class="modal__close" type="button"></button>
         <p class="modal__heading">Edit Profile</p>
         <form class="modal__form">
           <input
@@ -72,11 +68,7 @@
     <!--Add card modal-->
     <div class="modal" id="add-card-modal">
       <div class="modal__container">
-        <button
-          class="modal__close"
-          id="modal-close-button"
-          type="button"
-        ></button>
+        <button class="modal__close" type="button"></button>
         <p class="modal__heading">New Place</p>
         <form class="modal__form" id="add-card-form">
           <input
@@ -113,7 +105,7 @@
     <template id="card-template">
       <li class="card">
         <img class="card__image" src="" alt="" />
-        <img class="card__delete" src="" alt="" />
+        <img class="card__delete" src="images/Trash.svg" alt="trash-icon" />
         <div class="card__description">
           <h2 class="card__title"></h2>
           <button class="card__like-button" type="button"></button>
