--- a/index.html
+++ b/index.html
@@ -47,28 +47,30 @@
         <button class="modal__close" type="button"></button>
         <p class="modal__heading">Edit Profile</p>
         <form class="modal__form">
-          <input
-            class="modal__input"
-            id="title-input"
-            type="text"
-            name="title"
-            placeholder="Title"
-            maxlength="40"
-            minlength="2"
-            required
-          />
-          <span class="modal__error" id="title-input-error"></span>
-          <input
-            class="modal__input"
-            id="description-input"
-            type="text"
-            name="description"
-            placeholder="Description"
-            maxlength="200"
-            minlength="2"
-            required
-          />
-          <span class="modal__error" id="description-input-error"></span>
+          <label class="modal__input_container">
+            <input
+              class="modal__input"
+              id="title-input"
+              type="text"
+              name="title"
+              placeholder="Title"
+              maxlength="40"
+              minlength="2"
+              required />
+            <span class="modal__error" id="title-input-error"></span
+          ></label>
+          <label class="modal__input_container"
+            ><input
+              class="modal__input"
+              id="description-input"
+              type="text"
+              name="description"
+              placeholder="Description"
+              maxlength="200"
+              minlength="2"
+              required />
+            <span class="modal__error" id="description-input-error"></span
+          ></label>
           <button
             class="button modal__button modal__button_disabled"
             type="submit"
@@ -85,27 +87,35 @@
         <button class="modal__close" type="button"></button>
         <p class="modal__heading">New Place</p>
         <form class="modal__form" id="add-card-form">
-          <input
-            class="modal__input modal__input_type_title"
-            id="title-input"
-            type="text"
-            name="title"
-            placeholder="Title"
-            maxlength="40"
-            minlength="2"
-            required
-          />
-          <span class="modal__error" id="title-input-error"></span>
-          <input
-            class="modal__input modal__input_type_url"
-            id="description-input"
-            type="text"
-            name="url"
-            placeholder="Image URL"
-            required
-          />
-          <span class="modal__error" id="description-input-error"></span>
-          <button class="button modal__button" type="submit">Save</button>
+          <label class="modal__input_container"
+            ><input
+              class="modal__input modal__input_type_title"
+              id="title-input"
+              type="text"
+              name="title"
+              placeholder="Title"
+              maxlength="40"
+              minlength="2"
+              required />
+            <span class="modal__error" id="title-input-error"></span
+          ></label>
+          <label class="modal__input_container"
+            ><input
+              class="modal__input modal__input_type_url"
+              id="description-input"
+              type="url"
+              name="url"
+              placeholder="Image URL"
+              required />
+            <span class="modal__error" id="description-input-error"></span
+          ></label>
+          <button
+            class="button modal__button modal__button_disabled"
+            type="submit"
+            disabled
+          >
+            Save
+          </button>
         </form>
       </div>
     </div>
