update validation.js, index.html, and index.js

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <button class="modal__close" type="button"></button>
         <p class="modal__heading">Edit Profile</p>
         <form class="modal__form">
-          <label class="modal__input_container">
+          <label class="modal__form_container">
             <input
               class="modal__input"
               id="title-input"
@@ -59,7 +59,7 @@
               required />
             <span class="modal__error" id="title-input-error"></span
           ></label>
-          <label class="modal__input_container"
+          <label class="modal__form_container"
             ><input
               class="modal__input"
               id="description-input"
@@ -87,7 +87,7 @@
         <button class="modal__close" type="button"></button>
         <p class="modal__heading">New Place</p>
         <form class="modal__form" id="add-card-form">
-          <label class="modal__input_container"
+          <label class="modal__form_container"
             ><input
               class="modal__input modal__input_type_title"
               id="title-input"
