--- a/index.html
+++ b/index.html
@@ -142,7 +142,5 @@
         </div>
       </li>
     </template>
-    <script src="./scripts/index.js"></script>
-    <script src="./scripts/validation.js"></script>
-  </body>
+    <script src="./pages/index.js" type="module"></script>
 </html>
