--- a/src/index.html
+++ b/src/index.html
@@ -142,5 +142,5 @@
         </div>
       </li>
     </template>
-    <script src="./pages/index.js" type="module"></script>
+    <script src="./src/pages/index.js" type="module"></script>
 </html>
