--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,13 @@
       <header class="header page__section">
         <img
           class="header__logo"
-          src="./images/header-logo.svg"
+          src="/src/images/header-logo.svg"
           alt="Header Logo"
         />
       </header>
       <main class="content">
         <section class="profile page__section">
-          <img class="profile__image" src="./images/Avatar.jpg" alt="Avatar" />
+          <img class="profile__image" src="/src/images/Avatar.jpg" alt="Avatar" />
           <div class="profile__info">
             <h1 class="profile__title" id="profile-title">Jaques Cousteau</h1>
             <button
@@ -142,5 +142,5 @@
         </div>
       </li>
     </template>
-    <script src="./src/pages/index.js" type="module"></script>
+    <script src="/src/pages/index.js" type="module"></script>
 </html>
