--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
       </header>
       <main class="content">
         <section class="profile page__section">
-          <img class="profile__image" src="/src/images/Avatar.jpg" alt="Avatar" />
+          <img class="profile__image" src="<%=require('./src/images/Avatar.jpg')%>" alt="Avatar" />
           <div class="profile__info">
             <h1 class="profile__title" id="profile-title">Jaques Cousteau</h1>
             <button
@@ -142,5 +142,5 @@
         </div>
       </li>
     </template>
-    <script src="/src/pages/index.js" type="module"></script>
+    <script src="./src/pages/index.js" type="module"></script>
 </html>
